# cmake_training

./: .gitignore  README.md
01.HelloWordlExample/: CMakeLists.txt  main.c
02.BasicProject/: CMakeLists.txt  main.c
03.IntermediateProject/: CMakeLists.txt  clean.sh
03.IntermediateProject/app/: main.c
03.IntermediateProject/src/: my_lib.c
03a.IntermediateProject/: .clang-format  CMakeLists.txt
03a.IntermediateProject/app/: CMakeLists.txt
03a.IntermediateProject/src/my_lib/: CMakeLists.txt
03b.IntermediateProject/src/: CMakeLists.txt
03c.IntermediateProject_OPTIMAL_WAY/: CMakeLists.txt
03c.IntermediateProject_OPTIMAL_WAY/app/: CMakeLists.txt
03c.IntermediateProject_OPTIMAL_WAY/my_lib_src/src/: CMakeLists.txt
04.VariablesOptions/: CMakeLists.txt  Makefile  clean.sh
04.VariablesOptions/app/: main.c
05.ConfigureFile/: README
05.ConfigureFile/app/: CMakeLists.txt  Makefile  main.c
05.ConfigureFile/my_lib_src/inc/: CMakeLists.txt
06.SourcesAndHeaders/: CMakeLists.txt  Makefile  README
06.SourcesAndHeaders/app/: CMakeLists.txt  cmake_install.cmake
06.SourcesAndHeaders/my_lib_src/inc/: CMakeLists.txt
06.SourcesAndHeaders/my_lib_src/src/: CMakeLists.txt
07_C.ExternalSubmoduleGit_NOT_WORKING_CHANGING_TO_CPP_PRJ_FROM_NOW/: CMakeLists.txt
07_C.ExternalSubmoduleGit_NOT_WORKING_CHANGING_TO_CPP_PRJ_FROM_NOW/app/: CMakeLists.txt  main.c
07_C.ExternalSubmoduleGit_NOT_WORKING_CHANGING_TO_CPP_PRJ_FROM_NOW/configured/: config.h.in
07_C.ExternalSubmoduleGit_NOT_WORKING_CHANGING_TO_CPP_PRJ_FROM_NOW/src/my_lib/: CMakeLists.txt  my_lib.c
07_CPP.ExternalSubmoduleGit/: Makefile  README.md
07_CPP.ExternalSubmoduleGit/app/: CMakeLists.txt  main.cc
07_CPP.ExternalSubmoduleGit/cmake/: AddGitSubmodule.cmake
07_CPP.ExternalSubmoduleGit/src/my_lib/: CMakeLists.txt
08_CPP.FetchContent/: CMakeLists.txt  Makefile  README.md
08_CPP.FetchContent/app/: main.cc
08_CPP.FetchContent/src/my_lib/: CMakeLists.txt
